--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ec6327 url("./background.jpg") center no-repeat;
+  background: #2a7aec url("./background.jpg") center no-repeat;
   background-size: cover;
   background-attachment: fixed;
   height: 100vh;
